--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 			padding-left: 5px;
 		}
 	</style>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-	<script src="class.js"></script>
-	<script src="script.js"></script>
+	<script src="socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
